--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html{
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(144, 18, 247) , rgb(175, 138, 245), rgb(121, 151, 233));
+    background-image: linear-gradient(to right, rgb(121, 151, 233) , rgb(175, 138, 245), rgb(121, 151, 233));
 }
 
 footer{
@@ -11,18 +11,30 @@ footer{
   bottom: 0;
   right: 0;
   left: 0;
+  background-color: white;
 }
 
 header{
     font-size: 35px;
+    background-color: white;
+    box-shadow: 0 2px 4px -2px black;
+    position: fixed;
+    text-align: center;
+    right: 0;
+    left: 0;
+    top: 0;
+    background-color: white;
 }
 
 h1{
     text-align: center;
+    padding-top: 60px;
+    font-weight: 100;
 }
 
 h2{
     padding: 30px;
+    font-weight: 100;
 }
 
 h3{
@@ -33,11 +45,42 @@ h3{
 
 .navbar{
     float: right;
+    padding-right: 20px;
 }
 
-img{
-    padding-left: 380px;
+.marcus{
+    padding-left: 250px;
     height: auto;
     width: 450px;
 }
-    
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
+.name{
+    float: left;
+    padding-left: 20px;
+}
+
+section{
+    border-top: 1px solid white ;
+}
+main{
+    color: white;
+}
+body {
+    background: rgb(125, 102, 255);
+    max-width: 960px;
+    margin: 0 auto;
+    padding-top: 40px;
+  }
+
+  .climbing{
+    width: 250px;
+    height: auto;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    margin-top: -30px;
+  }
