--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
-html{
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(121, 151, 233) , rgb(175, 138, 245), rgb(121, 151, 233));
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  background-image: linear-gradient(
+    to right,
+    rgb(121, 151, 233),
+    rgb(175, 138, 245),
+    rgb(121, 151, 233)
+  );
 }
 
-footer{
+footer {
   box-shadow: 0 -2px 4px -2px black;
   position: fixed;
   text-align: center;
@@ -14,73 +19,84 @@ footer{
   background-color: white;
 }
 
-header{
-    font-size: 35px;
-    background-color: white;
-    box-shadow: 0 2px 4px -2px black;
-    position: fixed;
-    text-align: center;
-    right: 0;
-    left: 0;
-    top: 0;
-    background-color: white;
+header {
+  font-size: 35px;
+  background-color: white;
+  box-shadow: 0 2px 4px -2px black;
+  position: fixed;
+  text-align: center;
+  right: 0;
+  left: 0;
+  top: 0;
+  background-color: white;
 }
 
-h1{
-    text-align: center;
-    padding-top: 60px;
-    font-weight: 100;
+h1 {
+  text-align: center;
+  padding-top: 60px;
+  font-weight: 100;
 }
 
-h2{
-    padding: 30px;
-    font-weight: 100;
+h2 {
+  padding: 30px;
+  font-weight: 100;
 }
 
-h3{
-    padding-left: 100px;
-    padding-right: 100px;
-    font-family: 'Courier New', monospace;
+h3 {
+  padding-left: 100px;
+  padding-right: 100px;
+  font-family: "Courier New", monospace;
 }
 
-.navbar{
-    float: right;
-    padding-right: 20px;
+.navbar {
+  float: right;
+  padding-right: 20px;
 }
 
-.marcus{
-    padding-left: 250px;
-    height: auto;
-    width: 450px;
+.marcus {
+  padding-left: 250px;
+  height: auto;
+  width: 450px;
 }
 
-a{
-    color: black;
-    text-decoration: none;
+a {
+  color: black;
+  text-decoration: none;
 }
 
-.name{
-    float: left;
-    padding-left: 20px;
+.name {
+  float: left;
+  padding-left: 20px;
 }
 
-section{
-    border-top: 1px solid white ;
+section {
+  border-top: 1px solid white;
+  padding-bottom: 60px;
 }
-main{
-    color: white;
+main {
+  color: white;
 }
 body {
-    background: rgb(125, 102, 255);
-    max-width: 960px;
-    margin: 0 auto;
-    padding-top: 40px;
-  }
+  background: rgb(125, 102, 255);
+  max-width: 960px;
+  margin: 0 auto;
+  padding-bottom: 170px;
+}
 
-  .climbing{
+.climbing {
+  width: 250px;
+  height: auto;
+  padding-bottom: 50px;
+  padding-left: 20px;
+  margin-top: -30px;
+  padding-right: 20px;
+  float: left;
+}
+
+.gaming {
     width: 250px;
     height: auto;
-    padding-bottom: 50px;
-    padding-left: 20px;
-    margin-top: -30px;
-  }
+    float: right;
+    padding-right: 20px;
+    padding-left: 2px;
+}
