--- a/style.css
+++ b/style.css
@@ -100,3 +100,9 @@ body {
     padding-right: 20px;
     padding-left: 2px;
 }
+
+.project1{
+    width: 900px ;
+    height: auto;
+    padding-left: 30px;
+}
