--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 html {
   font-family: Arial, Helvetica, sans-serif;
   background-image: linear-gradient(
@@ -56,7 +59,7 @@ h3 {
 .marcus {
   padding-left: 250px;
   height: auto;
-  width: 450px;
+  width: 700px;
 }
 
 a {
@@ -84,7 +87,7 @@ body {
 }
 
 .climbing {
-  width: 250px;
+  width: 300px;
   height: auto;
   padding-bottom: 50px;
   padding-left: 20px;
@@ -104,5 +107,5 @@ body {
 .project1{
     width: 900px ;
     height: auto;
-    padding-left: 30px;
+    padding-left: 50px;
 }
