--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Poppins', sans-serif; 
   background-image: linear-gradient(
     to right,
     rgb(121, 151, 233),
@@ -48,7 +48,8 @@ h2 {
 h3 {
   padding-left: 100px;
   padding-right: 100px;
-  font-family: "Courier New", monospace;
+  font-family: 'PT Serif', serif;
+  font-weight: 150;
 }
 
 .navbar {
